<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoAlert</string>
    <string name="action_settings">Settings</string>
    <string name="latititudeLabel">Latitude:</string>
    <string name="longtitudeLabel">Longtitude:</string>
    <string name="setLabel">Set</string>
    <string name="title_activity_alert">AlertActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="alertLabel">ALERT!</string>
    <string name="enableGPS">enable GPS?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_alarm">AddAlarm</string>
    <string name="point_on_map">Point on Map</string>
    <string name="NameLabel">Name:</string>
    <string name="RadiusLabel">Radius:</string>
    <string name="NameAlertHint">Name of the Alert</string>
    <string name="radiusHint">radius in meters</string>
    <string name="reminderHintText">reminder text for location alarm</string>
    <string name="addLocationAlert">Add Location Alert</string>
    <string name="fillMandatoryFields">Specify at least:\nlatitude\nlongtitude\nradius\nname</string>
    <string name="fillGeoRightData">Specify correct location\n(90,-90) latitude\n(180,-180) longtitude</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="alertMapMarkerString">Alert Location</string>
    <string name="mapSearchTesxtFieldHint">Search Location</string>
    <string name="mapSearchButtonLabel">Search</string>
    <string name="mapSearchLocationNotFound">Unable to find specified Location</string>
    <string name="loadingString">Loading...</string>
    <string name="holdLocationOnMapToChoose">Please tap and hold the location on Map to choose it</string>

</resources>