<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    tools:context=".AddAlarm" >
	    
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	     >

    <Button
        android:id="@+id/pointOnMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="pointOnMap"
        android:text="@string/point_on_map" />
    
    	<LinearLayout
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="horizontal"
    	    android:layout_gravity="fill_horizontal"
    	    android:paddingLeft="@dimen/edit_alarm_margin"
    	    android:paddingRight="@dimen/edit_alarm_margin" >

	     	    <TextView
			        android:id="@+id/textView1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/latititudeLabel"
			        android:textAppearance="?android:attr/textAppearanceSmall" />

	     	    <EditText
	     	        android:id="@+id/latitudeTxt"
	     	        android:layout_width="0dp"
	     	        android:layout_height="wrap_content"
	     	        android:layout_weight="1"
	     	        android:ems="10"
	     	        android:inputType="numberDecimal"/>

		    </LinearLayout>
		    
    	    <LinearLayout
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	    	    android:orientation="horizontal"
	    	    android:layout_gravity="fill_horizontal"
	    	    android:paddingLeft="@dimen/edit_alarm_margin"
	    	    android:paddingRight="@dimen/edit_alarm_margin" >
	     	    
    	    	        <TextView
				        android:id="@+id/textView2"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/longtitudeLabel"
				        android:textAppearance="?android:attr/textAppearanceSmall" />

					    <EditText
					        android:id="@+id/longtitudeTxt"
					        android:layout_width="0dp"
					        android:layout_weight="1"
					        android:layout_height="wrap_content"
					        android:ems="10"
					        android:inputType="numberDecimal" />
			</LinearLayout>

			<LinearLayout
		    	    android:layout_width="fill_parent"
		    	    android:layout_height="wrap_content"
		    	    android:orientation="horizontal"
		    	    android:layout_gravity="fill_horizontal"
		    	    android:paddingLeft="@dimen/edit_alarm_margin"
		    	    android:paddingRight="@dimen/edit_alarm_margin" >
	
						    <TextView
						        android:id="@+id/textView4"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"
						        android:text="@string/RadiusLabel"
						        android:textAppearance="?android:attr/textAppearanceSmall" />
	
						    <EditText
						        android:id="@+id/radiusTxt"
						        android:layout_width="0dp"
						        android:layout_weight="1"
						        android:layout_height="wrap_content"
						        android:ems="10"
						        android:hint="@string/radiusHint"
						        android:inputType="number" />
	
			</LinearLayout>
			
			
			<LinearLayout
		    	    android:layout_width="fill_parent"
		    	    android:layout_height="wrap_content"
		    	    android:orientation="horizontal"
		    	    android:layout_gravity="fill_horizontal"
		    	    android:paddingLeft="@dimen/edit_alarm_margin"
		    	    android:paddingRight="@dimen/edit_alarm_margin" >
						    
			        <TextView
				        android:id="@+id/textView3"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/NameLabel"
				        android:textAppearance="?android:attr/textAppearanceSmall" />

				    <EditText
				        android:id="@+id/nameTxt"
				        android:layout_width="0dp"
				        android:layout_weight="1"
				        android:layout_height="wrap_content"
				        android:ems="10"
				        android:hint="@string/NameAlertHint" >
				        <requestFocus />
        			</EditText>
        	</LinearLayout>

		    <EditText
		        android:id="@+id/reminderTxt"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/reminderHintText"
		        android:inputType="textMultiLine"
		        android:lines="@integer/Reminder_lines" />
		    
		    
		  	<LinearLayout
		    	    android:layout_width="fill_parent"
		    	    android:layout_height="wrap_content"
		    	    android:orientation="horizontal"
		    	    android:layout_gravity="fill_horizontal"
		    	    android:paddingLeft="@dimen/edit_alarm_margin"
		    	    android:paddingRight="@dimen/edit_alarm_margin" >
    
			    <Button
			        android:id="@+id/setButton"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="left"
			        android:onClick="setAllert"
			        android:text="@string/setLabel" />
			    
			    		  	<LinearLayout
			    		  	    android:layout_width="fill_parent"
			    		  	    android:layout_height="wrap_content"
			    		  	    android:layout_gravity="right"
			    		  	    android:gravity="right"
			    		  	    android:orientation="horizontal"
			    		  	    android:paddingLeft="@dimen/edit_alarm_margin" >

			    		  		<Button
			    		  		    android:id="@+id/cancelButton"
			    		  		    android:layout_width="wrap_content"
			    		  		    android:layout_height="wrap_content"
			    		  		    android:onClick="cancelOperation"
			    		  		    android:text="@string/cancel" />

			     </LinearLayout>

		    </LinearLayout>

	</LinearLayout>
</ScrollView>